# fdp

./: .gitattributes  .gitignore  README.md  pixi.toml  pyproject.toml  setup.py
.github/workflows/: conda_build.yaml
docs/superpowers/plans/: 2026-06-22-fdp-scitoken-automation.md
docs/superpowers/specs/: 2026-06-22-fdp-scitoken-automation-design.md
fdp/: __init__.py  _version.py  auth.py  catalog.py  cli.py  devices.py  environment.py  filesystem.py  llm_shims.py  skills.py
fdp/resolvers/: __init__.py  http_catalog.py  mds_tree.py  ptdata.py  sql.py  zarr_store.py
recipe/: recipe.yaml  run_build.sh
tests/: _d3d_to_env_capture.json  test_auth.py  test_catalog.py  test_cli.py  test_device_resolution.py  test_devices.py  test_env_parity.py  test_environment.py  test_filesystem.py  test_llm_shims.py  test_resolvers.py  test_skills.py  testit  testit.py
