# Copyright 2024 General Atomics
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["setuptools>=61", "versioneer[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "fdp"
dynamic = ["version"]
description = "Fusion Data Platform CLI: Pelican/XRootD environment, OSDF browsing, AI-assistant skills, conversational LLM frontend"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
# Runtime deps are enforced via recipe/recipe.yaml for conda installs;
# pip users get nothing automatically since xrdcl-pelican is conda-only.
dependencies = []

[project.scripts]
fdp = "fdp.cli:main"

# Ship the logos shipped under fdp/logos/ so consumers (notably the
# toksearch chat GUI) can find the FDP brand image at runtime via
# fdp.main_logo_path().
[tool.setuptools.package-data]
fdp = ["logos/*.png"]

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "fdp/_version.py"
versionfile_build = "fdp/_version.py"
tag_prefix = "release-"
parentdir_prefix = "fdp-"
